# rosebud

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/cmds/: format.rs
crates/nom_assert/: Cargo.toml
crates/nom_assert/src/: lib.rs
crates/rosebud/: Cargo.toml
crates/rosebud/src/: de.rs  lib.rs  ser.rs
crates/rosebud/src/de/: enum.rs  field.rs  schema.rs
src/: bud.rs  main.rs
src/bud/: de.rs  ser.rs
src/bud/de/: enum.rs  field.rs  schema.rs
src/cli/: format.rs
