[package]
name = "rosebud"
authors = ["Jackson Wambolt", "Foo"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.0", features = ["cargo", "wrap_help"] }
describe = "0.1.0"
nom = "7.1.2"
serde = "1.0.152"
thiserror = "1.0.38"
